Display names of all SafeZones on main page for now

--- a/templates/main.jinja2
+++ b/templates/main.jinja2
@@ -2,4 +2,10 @@
 
 {% block content %}
     <h1>Tornado Safe Zone</h1>
+
+    <ul>
+        {% for sz in safezones %}
+        <li>{{ sz.title }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
