--- a/templates/main.jinja2
+++ b/templates/main.jinja2
@@ -1,11 +1,31 @@
 {% extends "templates/base.jinja2" %}
 
 {% block content %}
-    <h1>Tornado Safe Zone</h1>
+    <h1>Tornado Safe Zones</h1>
 
-    <ul>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Phone Number</th>
+                <th>Latitude</th>
+                <th>Longitude</th>
+                <th>Current Occupancy</th>
+                <th>Max Occupancy</th>
+            </tr>
+        </thead>
+        <tbody>
         {% for sz in safezones %}
-        <li>{{ sz.title }}</li>
+            <tr>
+                <td><a href="/safezone/{{ sz.id }}">{{ sz.title }}</a></td>
+                <td>{{ sz.phone }}</td>
+                <td>{{ sz.lat }}</td>
+                <td>{{ sz.lon }}</td>
+                <td>{{ sz.occupancy }}</td>
+                <td>{{ sz.max_occupancy }}</td>
+            </tr>
         {% endfor %}
-    </ul>
+        </tbody>
+
+    </table>
 {% endblock %}
