--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -43,7 +43,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">List Safe Zones</a></li>
+                    <li><a href="/">List Safe Zones</a></li>
                     <li><a href="/insert">Add New</a></li>
                 </ul>
 
