--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -25,6 +25,8 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- If this comment exists in the source the code is up to date, as of 2/27 at 5:00 AM -->
 </head>
 
 <body role="document">
